<resources>
    <string name="app_name">first-lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_hint">abc…</string>
    <string name="input_label">Nhập vào chuỗi</string>
    <string name="submit_button_txt">Submit</string>
    <string name="account_label">Tài khoản</string>
    <string name="setting_label">Cài đặt</string>
    <string name="profile_label">Hồ sơ nhân viên</string>
    <string name="b1">Count Characters</string>
    <string name="b2">Triangle</string>
    <string name="b3">Profile</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="point_1">Point 1:</string>
    <string name="point_2">Point 2:</string>
    <string name="point_3">Point 3:</string>
    <string name="time">02/10/2003</string>
    <string name="ok">OK</string>
    <string name="ht">Hành trình</string>
    <string name="draw_triangle">Draw triangle</string>
    <string name="hd">Hoạt động</string>
</resources>