<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bai2.TriangleFragment"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_bored_radius_2"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:text="@string/point_1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtP1X"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/x"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtP1Y"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/y"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:text="@string/point_2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtP2X"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/x"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtP2Y"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/y"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:text="@string/point_3"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtP3X"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/x"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtP3Y"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bored_radius"
                android:hint="@string/y"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/draw_triangle" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.duyvv.firstlesson.ui.bai3.customview.TriangleView
            android:id="@+id/triangleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>